# newrelic-agent-control

./: .codespellrc  .editorconfig  .gitignore  .goreleaser.yml  .goreleaser_amd64.yml  .goreleaser_arm64.yml  .pr-approval-probe-2.txt  .pr-approval-probe.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  FLAKE-PARTS-COMPARISON.md  LICENSE.md  MODULE-ARGS-EXPLAINED.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.md.tmpl  TODO.md  Tiltfile  aws_logs.sh  aws_logs_1740588833.txt  debian.yml  deny.toml  flake-parts-example.nix  flake-parts-without-module-args.nix  flake.nix  flake.nix.old  go.mod  go.sum  index.yaml  install-agent-control-poc.sh  loop.sh  module-args-simple-example.nix  replace_go_with_rust.sh  rust-aarch64.Dockerfile  sign_commits.exp  supervisor.go  (+2 more)
agent-control/: COUPLING.md  Cargo.toml  DIAGNOSTICS.md  Makefile  build.rs
agent-control/agent-type-registry/: README.md
agent-control/agent-type-registry/newrelic/: com.newrelic.apm_dotnet-0.1.0.yaml  com.newrelic.apm_java-0.1.0.yaml  com.newrelic.apm_node-0.1.0.yaml  com.newrelic.apm_python-0.1.0.yaml  com.newrelic.apm_ruby-0.1.0.yaml  com.newrelic.ebpf-0.1.0.yaml  com.newrelic.infrastructure-0.1.0.yaml  com.newrelic.integration_redis-0.1.0.yaml  com.newrelic.k8s_agent_operator-0.1.0.yaml  com.newrelic.opentelemetry.collector-0.1.0.yaml  com.newrelic.preload-0.1.0.yaml  com.newrelic.prometheus-0.1.0.yaml  custom-0.1.0.yaml  host-linux-com.newrelic.ebpf-0.1.0.yaml  host-linux-com.newrelic.infrastructure-0.1.0.yaml  host-linux-com.newrelic.opentelemetry.collector-0.1.0.yaml  host-linux-io.opentelemetry.collector-0.1.0.yaml  host-windows-com.newrelic.infrastructure-0.1.0.yaml  host-windows-com.newrelic.opentelemetry.collector-0.1.0.yaml  io.fixer-0.1.0.yaml  io.fluentbit-0.1.0.yaml  io.opentelemetry.collector-0.1.0.yaml  io.opentelemetry.collector-0.2.0.yaml  kubernetes-com.newrelic.apm_dotnet-0.1.0.yaml  kubernetes-com.newrelic.apm_java-0.1.0.yaml  kubernetes-com.newrelic.apm_node-0.1.0.yaml  kubernetes-com.newrelic.apm_python-0.1.0.yaml  kubernetes-com.newrelic.apm_ruby-0.1.0.yaml  kubernetes-com.newrelic.ebpf-0.1.0.yaml  kubernetes-com.newrelic.infrastructure-0.1.0.yaml  kubernetes-com.newrelic.k8s_agent_operator-0.1.0.yaml  kubernetes-com.newrelic.opentelemetry.collector-0.1.0.yaml  kubernetes-com.newrelic.prometheus-0.1.0.yaml  kubernetes-io.fluentbit-0.1.0.yaml  kubernetes-io.opentelemetry.collector-0.1.0.yaml  kubernetes-pipeline-control-gateway-0.1.0.yaml  kubernetes-pipeline-control-gateway-config-0.1.0.yaml  kubernetes-pipeline-control-gateway-config-mode-0.1.0.yaml  pipeline-control-gateway-0.1.0.yaml  pipeline-control-gateway-config-0.1.0.yaml  (+1 more)
agent-control/src/: ac_sysinfo.rs  agent_control.rs  agent_type.rs  checkers.rs  cli.rs  command.rs  context.rs  data_store.rs  environment.rs  event.rs  flags.rs  health.rs  http.rs  instrumentation.rs  k8s.rs  lib.rs  oci.rs  on_host.rs  opamp.rs  package.rs  reporter.rs  resource_ownership.rs  rollback_probation.rs  secret_providers.rs  secret_retriever.rs  secrets_provider.rs  signature.rs  sub_agent.rs  sub_agent_new.rs  tracing.rs  utils.rs  values.rs  version_checker.rs
agent-control/src/agent_control/: agent_control.rs  agent_id.rs  builder.rs  config.rs  config_repository.rs  config_storer.rs  config_validator.rs  defaults.rs  error.rs  event_handler.rs  health_checker.rs  http_server.rs  pid_cache.rs  resource_cleaner.rs  run.rs  updater.rs  uptime_report.rs  version_updater.rs
agent-control/src/agent_type/: README.md  agent_attributes.rs  agent_metadata.rs  agent_type_id.rs  agent_type_registry.rs  definition.rs  embedded_registry.rs  environment.rs  environment_variable.rs  error.rs  guid_config.rs  health_config.rs  oci.rs  protocol_version.rs  registry.rs  render.rs  renderer.rs  restart_policy.rs  runtime_config.rs  templates.rs  templates_conditional.rs  templates_function.rs  trivial_value.rs  variable.rs  variable_constraints.rs  version_config.rs
agent-control/src/checkers/: guid.rs  health.rs  status.rs  version.rs
agent-control/src/cli/: common.rs  error.rs  errors.rs  install.rs  install_agent_control.rs  k8s.rs  logs.rs  on_host.rs  one_shot_operation.rs  uninstall.rs  uninstall_agent_control.rs  utils.rs
agent-control/src/command/: on_host_checks.rs  windows.rs
agent-control/src/config_migrate/: cli.rs  migration.rs
agent-control/src/diagnostics/: global.rs  handlers.rs  metrics.rs  mod.rs  profiling.rs  spawn_tracker.rs
agent-control/src/event/: broadcaster.rs  cancellation.rs  channel.rs
agent-control/src/health/: events.rs  health_checker.rs  k8s.rs  noop.rs  with_start_time.rs
agent-control/src/http/: client.rs  config.rs  proxy.rs  reqwest.rs  (+1 more)
agent-control/tests/: integration_tests.rs
config-migrate/: Cargo.toml
config-migrate/src/: cli.rs  lib.rs
crowdstrike-sensor/: Cargo.toml
crowdstrike-sensor/src/: cli.rs  crowdstrike.rs  http_client.rs  lib.rs
fs/: Cargo.toml
fs/src/: directory_manager.rs  file.rs  file_deleter.rs  file_reader.rs  file_renamer.rs  lib.rs  utils.rs  win_permissions.rs  writer_file.rs
identifier/: Cargo.toml
identifier/src/: lib.rs
k8s-test-env/: Cargo.toml
k8s-test-env/src/: env.rs  foo_crd.rs  lib.rs  runtime.rs
license/: Cargo.toml  Makefile
license/src/: main.rs
resource-detection/: Cargo.toml
resource-detection/src/: common.rs  file_reader.rs  http_client.rs  lib.rs  system.rs
richenv/: Cargo.toml
richenv/src/: definition.rs  envvar.rs  lib.rs
self-replacer/: Cargo.toml
self-replacer/examples/: self_replacing_binary.rs
self-replacer/src/: lib.rs  replacer.rs  unix.rs  windows.rs
self-replacer/tests/: integration_tests.rs  test_helpers.rs
super-agent/: Cargo.toml  Makefile  build.rs
super-agent/agent-type-registry/: README.md
super-agent/spec/: status_endpoint.yaml
super-agent/src/: agent_type.rs  cli.rs  config_migrate.rs  context.rs  event.rs  lib.rs  logging.rs  runtime.rs  sub_agent.rs  super_agent.rs  values.rs
super-agent/tests/: integration_tests.rs
test/e2e-runner/: Cargo.toml  Readme.md
(+1933 files in other folders)
