[workspace]
resolver = "3"

members = ["agent-control", "resource-detection", "fs", "wrapper_with_default"]

[workspace.package]
authors = ["The New Relic Agent Control Team"]
edition = "2024"
publish = false
rust-version = "1.89.0"
license-file = "./LICENSE.md"
repository = "https://github.com/newrelic/newrelic-agent-control"

[workspace.dependencies]
serde_json = "1.0.145"
serde = "1.0.228"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing = "0.1.43"
regex = "1.12.2"
mockall = "0.14.0"
clap = "4.5.53"
nix = "0.30.1"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
tracing-test = "0.2.5"
assert_cmd = "2.1.1"
assert_matches = "1.5.0"
tower-test = "0.4.0"
serde_yaml = "0.9.34+deprecated"
schemars = "1.1.0"
http = "1.4.0"
mockall_double = "0.3.1"
predicates = "3.1.3"
konst = "0.4.3"
semver = "1.0.27"
chrono = "0.4.42"
jsonwebtoken = "9.3.1"
# reqwest's default-features enables default-tls and we are not including it since we are using rustls only.
reqwest = { version = "0.12.26", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "rustls-tls-native-roots",
  "socks",
] }
rstest = "0.26.1"
windows = "0.62.2"
windows-sys = "0.61.2"

[profile.release]
# remove debug symbols from the release binary
# After <https://github.com/rust-lang/cargo/pull/13257> this is the default
# behavior for cargo, unless debuginfo is enabled for any compiled package
strip = "debuginfo"

[workspace.metadata.cargo-shear]
ignored = ["mockall_double"]
