[package]
name = "config-migrate"
description = "Script to migrate legacy infra-agent configs to the new values format"
version = "0.0.1"
edition = "2021"
authors = ["The New Relic Core Agent & Open Standards (CAOS) Team"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
nix = { workspace = true, features = ["signal", "user", "hostname"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
serde_yaml = { workspace = true }
newrelic_super_agent = { path = "../super-agent" }
fs = { path = "../fs" }
semver = "1.0.22"

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
bollard = { workspace = true }
predicates = { workspace = true }
tower-test = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
assert_matches = { workspace = true }
mockall_double = { workspace = true }
tracing-test = { workspace = true }
fs = { path = "../fs", features = ["mocks"] }

[[bin]]
name = "newrelic-config-migrate"
path = "src/bin/main.rs"
