[package]
name = "fs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = { workspace = true, optional = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
mocks = ["dep:mockall"]
