[package]
name = "fs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = "0.1.43"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Security",
  "Win32_Security_Authorization",
] }
encoding_rs = "0.8.35"

[dev-dependencies]
tempfile = { workspace = true }

[features]
mocks = ["dep:mockall"]
