[package]
name = "license"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tera = { version = "1", default-features = false }
