[package]
name = "resource-detection"
description = "The resource detection can be used to detect resource information from the host"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
nix = { workspace = true, features = ["hostname"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = "1.6.0"
ureq = { workspace = true, features = ["http-crate"] }
fs = { path = "../fs" }
konst = { workspace = true }
url = { version = "2.5.0"}

[dev-dependencies]
assert_matches = { workspace = true }
fs = { path = "../fs", features = ["mocks"] }
mockall = { workspace = true }
httpmock = "0.7.0"
