[package]
name = "self-replacer"
description = "Platform-specific binary self-replacement logic"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
] }

[target.'cfg(unix)'.dependencies]
tempfile = { workspace = true }
