[package]
name = "newrelic_super_agent"
description = "New Relic Super Agent Limited Preview"
version = "0.11.0"
edition = "2021"
authors = ["The New Relic Core Agent & Open Standards (CAOS) Team"]
publish = false
default-run = "newrelic-super-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
nix = { workspace = true, features = ["signal", "user", "hostname"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tracing = { workspace = true }
ctrlc = { version = "3.4.0", features = ["termination"] }
serde_yaml = { workspace = true }
regex = { workspace = true }
opamp-client = { git = "ssh://git@github.com/newrelic/opamp-rs.git", tag = "0.0.13", features = [
  "sync-http",
], default-features = false }
futures = { version = "0.3.28", optional = true }
async-trait = { version = "0.1.71", optional = true }
tokio = { version = "1.35.1", optional = true, features = [
  "rt-multi-thread",
  "macros",
] }
ulid = { workspace = true, features = ["serde"] }
duration-str = "0.7.0"
fs = { path = "../fs" }
konst = { workspace = true }

# OnHost subagent dependencies
# IMPORTANT: All onhost only deps needs to be `optional = true` so they won't be compiled by default
resource-detection = { path = "../resource-detection" }

# K8S subagent dependencies
# IMPORTANT: All k8s only deps needs to be `optional = true` so they won't be compiled by default
kube = { version = "0.88.1", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.21.1", features = ["latest"], optional = true }
either = { version = "1.9.0", optional = true }
crossbeam = { version = "0.8.3", features = ["crossbeam-channel"] }
tracing-appender = "0.2.3"
cfg-if = "1.0.0"
opentelemetry-semantic-conventions = "0.14.0"

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
bollard = { workspace = true }
predicates = { workspace = true }
tower-test = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
assert_matches = { workspace = true }
mockall_double = { workspace = true }
tracing-test = { workspace = true }
fs = { path = "../fs", features = ["mocks"] }
tokio = { version = "1.32.0", features = [
  "rt-multi-thread",
  "macros",
] }
wiremock = "0.6.0"


[[test]]
name = "k8s"
path = "test/k8s/mod.rs"
required-features = ["k8s"]


[[test]]
name = "on_host"
path = "test/on_host/mod.rs"
required-features = ["onhost"]


[[bin]]
name = "newrelic-super-agent"
path = "src/bin/main.rs"

[features]
onhost = []
k8s = [
  "dep:kube",
  "dep:k8s-openapi",
  "dep:either",
  "dep:futures",
  "dep:async-trait",
  "dep:tokio",
]
# feature ci allows calling --all-features (needed on the test pipelines) and not failing to compile
ci = []
